--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
-    "@shopify/react-native-skia": "^2.2.20",
+    "@shopify/react-native-skia": "^2.2.12",
     "@types/d3-force": "^3.0.10",
     "@types/d3-scale": "^4.0.9",
     "axios": "^1.12.2",
@@ -37,6 +37,7 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
     "typescript": "~5.9.2"
