--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,12 @@
 {
   "extends": "expo/tsconfig.base",
+
+  // This is where 'include' belongs: at the root level.
+  "include": ["**/*.ts", "**/*.tsx", "./src/types/reanimated.d.ts"],
+
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "types": ["react-native-reanimated", "node"],
+    "skipLibCheck": true
   }
 }
