--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --runInBand",
+    "generate-audio": "node scripts/generate-audio-files.js",
+    "validate-audio": "node scripts/validate-audio-assets.js",
+    "generate-audio-guide": "node scripts/generate-audio-files.js",
+    "validate-audio-assets": "node scripts/validate-audio-assets.js",
+    "check-soundscapes": "node scripts/validate-audio-assets.js"
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-community/masked-view": "^0.1.11",
@@ -21,9 +28,14 @@
     "d3-force": "^3.0.0",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
+    "eventemitter3": "^5.0.1",
     "expo": "~54.0.10",
+    "expo-av": "~16.0.7",
+    "expo-blur": "^15.0.7",
+    "expo-haptics": "^15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "lucide-react": "^0.544.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
@@ -33,13 +45,18 @@
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
     "react-native-svg": "15.12.1",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-vision-camera": "^4.7.2",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^24.5.2",
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.4.4",
     "typescript": "~5.9.2"
   },
   "private": true
