--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@shopify/react-native-skia": "^2.2.12",
+    "@supabase/supabase-js": "^2.58.0",
     "@types/d3-force": "^3.0.10",
     "@types/d3-scale": "^4.0.9",
     "axios": "^1.12.2",
@@ -55,6 +56,7 @@
     "@types/node": "^24.5.2",
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.4.4",
     "typescript": "~5.9.2"
