Update various components and services

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,11 @@
 
   // This is where 'include' belongs: at the root level.
   "include": ["**/*.ts", "**/*.tsx", "./src/types/reanimated.d.ts"],
-  "exclude": ["node_modules", "__tests__", "**/*.test.ts", "**/*.test.tsx"],
+  "exclude": ["node_modules", "__tests__", "**/*.test.ts", "**/*.test.tsx", "supabase/functions/**/*"  ],
 
   "compilerOptions": {
     "strict": true,
     "types": ["react-native-reanimated", "node", "jest"],
     "skipLibCheck": true
-  }
+  },
 }
