--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "fix-android-dup": "node ./scripts/gradle-fix.js",
+    "prebuild-android": "npx expo prebuild && node ./scripts/gradle-fix.js",
+    "android-build": "cd android && .\\gradlew.bat clean assembleDebug",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --runInBand",
+    "setup-env": "bash setup-env.sh",
+    "setup-backend": "bash setup-env.sh && supabase functions deploy",
     "generate-audio": "node scripts/generate-audio-files.js",
     "validate-audio": "node scripts/validate-audio-assets.js",
     "generate-audio-guide": "node scripts/generate-audio-files.js",
@@ -17,11 +22,13 @@
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
-    "@shopify/react-native-skia": "^2.2.12",
+    "@react-navigation/stack": "^7.4.8",
+    "@shopify/react-native-skia": "2.2.12",
     "@supabase/supabase-js": "^2.58.0",
     "@types/d3-force": "^3.0.10",
     "@types/d3-scale": "^4.0.9",
@@ -29,18 +36,26 @@
     "d3-force": "^3.0.0",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
+    "dotenv": "^17.2.3",
     "eventemitter3": "^5.0.1",
     "expo": "~54.0.10",
     "expo-av": "~16.0.7",
     "expo-blur": "^15.0.7",
+    "expo-build-properties": "^1.0.9",
+    "expo-constants": "^18.0.9",
     "expo-haptics": "^15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "lucide-react": "^0.544.0",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-calendars": "^1.1313.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-device-info": "^14.1.1",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.6.1",
@@ -49,9 +64,12 @@
     "react-native-vector-icons": "^10.3.0",
     "react-native-vision-camera": "^4.7.2",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.27.1",
+    "@types/deno": "^2.5.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^24.5.2",
     "@types/react": "~19.1.0",
@@ -60,6 +78,10 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.4.4",
     "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "react-native-reanimated": "$react-native-reanimated",
+    "react-native-worklets": "$react-native-worklets"
   },
   "private": true
 }
