--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,72 +1,54 @@
-name: Build APKs
+name: Build APKs with EAS
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      ANDROID_SDK_ROOT: ${{ runner.temp }}/android-sdk
-      JAVA_HOME: /opt/hostedtoolcache/jdk
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
 
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Install system deps
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y unzip wget
-
-      - name: Install Android command line tools and SDK packages
-        run: |
-          set -e
-          SDK_ROOT="$ANDROID_SDK_ROOT"
-          mkdir -p "$SDK_ROOT"
-          cd "$SDK_ROOT"
-          echo "Downloading Android command line tools..."
-          wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline.zip
-          unzip -q cmdline.zip -d cmdline-tools-temp
-          mkdir -p cmdline-tools/latest
-          mv cmdline-tools-temp/cmdline-tools/* cmdline-tools/latest/
-          export PATH="$SDK_ROOT/cmdline-tools/latest/bin:$PATH"
-          yes | sdkmanager --sdk_root="$SDK_ROOT" --licenses || true
-          sdkmanager --sdk_root="$SDK_ROOT" "platform-tools" "platforms;android-36" "build-tools;36.0.0" "ndk;27.1.12297006" "cmake;3.22.1" "cmdline-tools;latest"
-
-      - name: Show SDK info
-        run: |
-          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT"
-          ls -la "$ANDROID_SDK_ROOT"
+      - name: Install EAS CLI
+        run: npm install -g @expo/eas-cli
 
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
 
-      - name: Run prebuild and gradle fix
-        run: npm run prebuild-android
+      - name: Build Debug APK with EAS
+        run: eas build --platform android --profile development --non-interactive
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
 
-      - name: Build Debug APK
-        run: cd android && ./gradlew assembleDebug --no-daemon
+      - name: Build Release APK with EAS
+        run: eas build --platform android --profile production --non-interactive
+        env:
+          EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
 
-      - name: Build Release APK
-        run: cd android && ./gradlew assembleRelease --no-daemon
+      - name: Download APKs
+        run: |
+          eas build:list --platform android --status finished --limit 2 --json > builds.json
+          DEBUG_BUILD_URL=$(jq -r '.[0].artifacts.buildUrl // empty' builds.json)
+          RELEASE_BUILD_URL=$(jq -r '.[1].artifacts.buildUrl // empty' builds.json)
+          if [ -n "$DEBUG_BUILD_URL" ]; then
+            curl -L -o debug.apk "$DEBUG_BUILD_URL"
+          fi
+          if [ -n "$RELEASE_BUILD_URL" ]; then
+            curl -L -o release.apk "$RELEASE_BUILD_URL"
+          fi
 
       - name: Upload APKs
         uses: actions/upload-artifact@v4
         with:
           name: NeuroLearn-APKs
           path: |
-            android/app/build/outputs/apk/debug/app-debug.apk
-            android/app/build/outputs/apk/release/app-release.apk
+            debug.apk
+            release.apk
