--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "fix-android-dup": "node ./scripts/gradle-fix.js",
     "prebuild-android": "npx expo prebuild && node ./scripts/gradle-fix.js",
     "android-build": "cd android && .\\gradlew.bat clean assembleDebug",
+    "eas-build-pre-install": "./eas-build-pre-install.sh",
+    "build:ci": "npm run prebuild-android && cd android && ./gradlew assembleRelease",
+    "verify-setup": "node scripts/verify-setup.js",
+    "dev:full": "npm run setup-env && expo start",
+    "build:local": "eas build --platform android --local",
+    "test:all": "npm run validate-audio && npm test",
+    "prebuild-check": "node scripts/pre-build-check.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -36,7 +43,6 @@
     "d3-force": "^3.0.0",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.2.0",
-    "dotenv": "^17.2.3",
     "eventemitter3": "^5.0.1",
     "expo": "~54.0.10",
     "expo-av": "~16.0.7",
@@ -75,6 +81,7 @@
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
     "@types/uuid": "^10.0.0",
+    "dotenv": "^17.2.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.4.4",
     "typescript": "~5.9.2"
