--- a/package.json
+++ b/package.json
@@ -48,12 +48,16 @@
     "eventemitter3": "^5.0.1",
     "expo": "~54.0.10",
     "expo-av": "~16.0.7",
+    "expo-battery": "^10.0.7",
     "expo-blur": "^15.0.7",
     "expo-build-properties": "^1.0.9",
     "expo-constants": "^18.0.9",
+    "expo-device": "^8.0.9",
     "expo-haptics": "^15.0.7",
     "expo-linear-gradient": "~15.0.7",
     "expo-local-authentication": "~17.0.7",
+    "expo-location": "~19.0.7",
+    "expo-network": "^8.0.7",
     "expo-status-bar": "~3.0.8",
     "lucide-react": "^0.544.0",
     "nativewind": "^4.2.1",
@@ -86,6 +90,7 @@
     "@types/deno": "^2.5.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^24.6.2",
+    "@types/pako": "^2.0.4",
     "@types/react": "~19.1.0",
     "@types/react-native": "^0.72.8",
     "@types/uuid": "^10.0.0",
