--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -18,7 +18,8 @@ jobs:
           node-version: 20
 
       - name: Install EAS CLI
-        run: npm install -g @expo/eas-cli
+        # The correct npm package published for EAS CLI is `eas-cli` (not @expo/eas-cli)
+        run: npm install -g eas-cli
 
       - name: Install dependencies
         run: npm ci --legacy-peer-deps
