--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "expo-network": "^8.0.7",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-dev-client": "~2.0.0",
     "lottie-react-native": "^7.3.4",
     "lucide-react": "^0.544.0",
     "moti": "^0.30.0",
