--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,7 @@
 {
   "cli": {
     "version": ">= 3.17.0",
-    "appVersionSource": "app.json"
+    "appVersionSource": "local"
   },
   "build": {
     "development": {
