--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "expo-blur": "^15.0.7",
     "expo-build-properties": "^1.0.9",
     "expo-constants": "^18.0.9",
+    "expo-dev-client": "~6.0.15",
     "expo-device": "^8.0.9",
     "expo-haptics": "^15.0.7",
     "expo-linear-gradient": "~15.0.7",
@@ -71,7 +72,6 @@
     "expo-network": "^8.0.7",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-    "expo-dev-client": "~2.0.0",
     "lottie-react-native": "^7.3.4",
     "lucide-react": "^0.544.0",
     "moti": "^0.30.0",
@@ -116,7 +116,6 @@
     "@types/node": "^24.6.2",
     "@types/pako": "^2.0.4",
     "@types/react": "~19.1.0",
-    "@types/react-native": "^0.72.8",
     "@types/uuid": "^10.0.0",
     "dotenv": "^17.2.3",
     "jest": "^29.7.0",
@@ -128,7 +127,8 @@
   },
   "overrides": {
     "react-native-reanimated": "$react-native-reanimated",
-    "react-native-worklets": "$react-native-worklets"
+    "react-native-worklets": "$react-native-worklets",
+    "react-native-safe-area-context": "$react-native-safe-area-context"
   },
   "private": true
 }
