--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "expo-network": "^8.0.7",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "lottie-react-native": "^7.3.4",
     "lucide-react": "^0.544.0",
     "moti": "^0.30.0",
