--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "lucide-react": "^0.544.0",
     "moti": "^0.30.0",
     "nativewind": "^4.2.1",
-    "react": "19.1.0",
+    "react": "^19.2.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-calendars": "^1.1313.0",
