Build Artifact install done

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "dev:teardown": "npx ts-node src/dev/devTeardown.ts",
     "dev:client": "node scripts/dev-client.js",
     "dev:client:build": "node scripts/dev-client.js --build",
-    "dev:client:run": "node scripts/dev-client.js --run"
+    "dev:client:run": "node scripts/dev-client.js --run",
+    "fix:android-manifests": "node scripts/fix-android-manifest-namespace.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -39,7 +40,6 @@
     "@notionhq/client": "^1.0.4",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.4.7",
@@ -79,7 +79,7 @@
     "lucide-react": "^0.544.0",
     "moti": "^0.30.0",
     "nativewind": "^4.2.1",
-    "react": "^19.2.0",
+    "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-calendars": "^1.1313.0",
@@ -123,18 +123,19 @@
     "dotenv": "^17.2.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "react-test-renderer": "^19.1.0",
+    "react-test-renderer": "19.1.0",
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.2"
   },
   "overrides": {
-    "react-native-reanimated": "$react-native-reanimated",
-    "react-native-worklets": "$react-native-worklets",
-    "react-native-safe-area-context": "$react-native-safe-area-context",
+
+
     "react-native-skeleton-placeholder": {
       "@react-native-masked-view/masked-view": "0.3.2"
     }
   },
   "private": true
 }
+
+
